# bevy_debugger_mcp

./: .gitignore  Cargo.toml  build.rs
benches/: optimization_benchmarks.rs  performance_benchmarks.rs  query_optimization_benchmarks.rs  regression_benchmarks.rs
examples/: screenshot_setup.rs
src/: anomaly_detector.rs  benchmark_runner.rs  bevy_observability_integration.rs  brp_client.rs  brp_client_refactored.rs  brp_client_v2.rs  brp_command_handler.rs  brp_integration.rs  brp_messages.rs  brp_validation.rs  checkpoint.rs  circuit_breaker.rs  cli.rs  command_cache.rs  compile_opts.rs  config.rs  connection_pool.rs  deadlock_detector.rs  debug_brp_handler.rs  debug_command_processor.rs  entity_inspector.rs  error.rs  experiment_system.rs  heartbeat.rs  hot_reload.rs  hypothesis_system.rs  issue_detector.rs  issue_detector_processor.rs  lazy_init.rs  lib.rs  lock_contention_benchmark.rs  main.rs  mcp_server.rs  mcp_server_v2.rs  mcp_tools.rs  memory_optimization_tracker.rs  memory_pools.rs  memory_profiler.rs  memory_profiler_processor.rs  panic_prevention_tests.rs  (+31 more)
src/bevy_reflection/: custom_inspectors.rs  inspector.rs  mod.rs  reflection_queries.rs  type_registry_tools.rs
src/observability/: alerts.rs  health.rs  metrics.rs  mod.rs  telemetry.rs  tracing.rs
src/tools/: experiment.rs  hypothesis.rs  observe.rs  observe_optimized.rs  replay.rs  replay_v2.rs  stress.rs
src/visual_overlays/: colliders.rs  custom_markers.rs  entity_highlight.rs  mod.rs  performance_metrics.rs  system_flow.rs  transforms.rs
tests/: bevy_reflection_integration_tests.rs  brp_bevy_16_compatibility.rs  brp_refactor_integration_tests.rs  brp_validation_tests.rs  caching_integration_tests.rs  comprehensive_integration_test.rs  debug_command_integration_tests.rs  dependency_audit_test.rs  e2e_performance_with_bevy_game.rs  entity_inspector_integration_tests.rs  epic_6_integration_test.rs  error_recovery_tests.rs  feature_flag_combination_tests.rs  integration_test.rs  issue_detection_integration_tests.rs  lazy_init_integration_tests.rs  mcp_integration_test_suite.rs  mcp_protocol_compliance_tests.rs  memory_optimization_tests.rs  memory_pooling_integration_tests.rs  memory_profiler_integration_tests.rs  ml_integration_tests.rs  observability_integration_test.rs  orchestration_integration_test.rs  pattern_learning_tests.rs  performance_budget_integration_tests.rs  performance_optimizations_integration_tests.rs  performance_regression_tests.rs  playback_tests.rs  production_resilience_tests.rs  query_builder_integration_tests.rs  resource_manager_tests.rs  rmcp_api_compatibility_test.rs  screenshot_e2e_tests.rs  screenshot_integration_wrapper.rs  security_integration_test.rs  session_management_integration_tests.rs  simple_integration_test.rs  stdio_integration_test.rs  system_profiler_integration_tests.rs  (+8 more)
tests/fixtures/: animated_test_game.rs  complex_ecs_game.rs  mod.rs  performance_test_game.rs  static_test_game.rs
tests/helpers/: memory_tracker.rs  mod.rs  performance_measurement.rs  query_generators.rs  screenshot_test_utils.rs  test_game_process.rs
tests/integration/: harness.rs  mod.rs
tests/mocks/: mcp_client.rs  mod.rs
