[package]
name = "bevy_debugger_mcp"
version = "0.1.10"
edition = "2021"
authors = ["ladvien <ladvien@example.com>"]
description = "AI-assisted debugging for Bevy games through Claude Code using Model Context Protocol"
homepage = "https://github.com/ladvien/bevy_debugger_mcp"
repository = "https://github.com/ladvien/bevy_debugger_mcp"
readme = "README.md"
license = "GPL-3.0"
keywords = ["bevy", "debugging", "mcp", "claude", "gamedev"]
categories = ["game-development", "development-tools", "command-line-utilities"]
rust-version = "1.70"
build = "build.rs"
include = [
    "src/**/*",
    "tests/**/*",
    "benches/**/*",
    "Cargo.toml",
    "Cargo.lock",
    "LICENSE",
    "README.md",
    "build.rs",
    "scripts/bevy-debugger-control"
]
exclude = [
    "target/*",
    ".git/*",
    "launchd/*",
    "scripts/homebrew-formula.rb",
    "docs/CLAUDE_SUBAGENT_GUIDE.md"
]

[[bin]]
name = "bevy-debugger-mcp"
path = "src/main.rs"

# Test configuration for screenshot integration
[[test]]
name = "screenshot_integration_wrapper"
path = "tests/screenshot_integration_wrapper.rs"

[dependencies]
# MCP SDK for proper protocol implementation
rmcp = { version = "0.2.1", features = ["server"] }
rmcp-macros = "0.2.1"

tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
url = "2.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
dashmap = "6.0"
strsim = "0.11"
rand = "0.9.2"
rand_distr = "0.5.1"
async-trait = "0.1.89"
flate2 = "1.1.2"
sha2 = "0.10.9"
bincode = "1"
tokio-stream = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio-metrics = "0.3"
sysinfo = "0.30"
hostname = "0.3"
rustc_version_runtime = "0.3"
is-terminal = "0.4"
notify = "6.0"
once_cell = "1.20"
num_cpus = "1.16"
rayon = "1.10"

# Security and authentication
jsonwebtoken = "9.0"
ring = "0.17"
base64 = "0.22"
argon2 = "0.5"
governor = "0.6"
headers = "0.4"

# Performance optimization dependencies
ahash = "0.8"

# Observability dependencies  
opentelemetry = "0.22"
opentelemetry-otlp = "0.15"
opentelemetry-prometheus = "0.15"
opentelemetry-jaeger = "0.22"
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }
opentelemetry-stdout = "0.5"
tracing-opentelemetry = "0.25"
prometheus = "0.13"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
lazy_static = "1.5"

# Web server dependencies (shared by security and observability)
hyper = { version = "1.0", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.5", features = ["auth", "cors", "trace", "metrics"] }
axum = { version = "0.7", features = ["macros", "json"] }

# Optional Bevy dependency for visual overlays and reflection
bevy = { version = "0.16", features = ["default", "bevy_remote"], optional = true }
reqwest = "0.13.2"

[features]
# Default features - minimal overhead
default = ["basic-debugging"]

# Core debugging features
basic-debugging = []
full-debugging = [
    "basic-debugging",
    "entity-inspection", 
    "performance-profiling",
    "visual-debugging",
    "session-management",
    "issue-detection",
    "observability"
]

# Individual feature flags for granular control
entity-inspection = []
performance-profiling = []
visual-debugging = ["bevy"]
bevy-reflection = ["bevy"]
session-management = []
issue-detection = []
memory-profiling = []
stress-testing = []
time-travel = []
orchestration = []
observability = []

# Performance optimizations
optimizations = ["caching", "pooling", "lazy-init", "fast-hash"]
caching = []
pooling = []
lazy-init = []
fast-hash = []

# Development and testing features
dev-tools = ["benchmarking", "detailed-logging", "profiling"]
benchmarking = []
detailed-logging = []
profiling = ["performance-profiling"]

# Legacy compatibility
visual_overlays = ["visual-debugging"]

[profile.release]
# Optimize for performance in release builds
opt-level = 3
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization, slower compile
panic = "abort"     # Smaller binaries, no unwinding
strip = true        # Remove debug symbols

[profile.dev]
# Faster compilation for development
opt-level = 0
debug = true
incremental = true

[profile.release-with-debug]
# Release performance with debug info
inherits = "release"
debug = true
strip = false

[profile.bench]
# Optimization for benchmarks
inherits = "release"
debug = true
lto = "thin"        # Faster LTO for benchmarks

[dev-dependencies]
tokio-test = "0.4"
bevy = { version = "0.16", features = ["default", "bevy_remote"] }
nix = { version = "0.27", features = ["signal", "process"] }
tempfile = "3.0"
sha2 = "0.10.9"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
rand = "0.9.2"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"

[[bench]]
name = "performance_benchmarks"
harness = false

[[bench]]
name = "query_optimization_benchmarks"
harness = false

